# Multi-Video-Timing-Analysis-Tool

./: Cargo.toml  README.md  build.rs
src/: main.rs  video_pipeline.rs
src/helpers/: data.rs  format.rs  mod.rs  parse.rs  ui.rs
src/widgets/: mod.rs  style.css  video_player.gresource.xml  video_player.ui  video_player_layout.txt  video_player_widget.rs
src/widgets/main_window/: mwindow.gresource.xml  mwindow.ui  style.css
src/widgets/seek_bar/: color_picker.rs  mod.rs  seek_bar.rs  seekbar.gresource.xml  shared_seek_bar.rs  sharedseekbar.gresource.xml  sharedseekbar.ui
src/widgets/split_panel/: mod.rs  spanel.gresource.xml  spanel.ui  splits.rs  splittable.rs  sptable.gresource.xml  style.css  timeentry.rs  videosegmentproxy.rs
src/widgets/sync/: sync_manager.rs
src/widgets/video_player_widget/: mod.rs  seek_bar.rs  seekbar.ui  style.css  video_player.rs  vplayer.gresource.xml  vplayer.ui
