[package]
name = "rust-video-player"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = "0.20.6"
gtk = { package = "gtk4", version = "0.9.4" }
gio = "0.20.6"
gstreamer = "0.23"
gstreamer-video = "0.23"
gstgtk4 = { package = "gst-plugin-gtk4", version = "0.13.3"}
once_cell = "1.21.3"

[build-dependencies]
glib-build-tools = "0.20.0"

[profile.dev]
debug = true

